new proj/src/objects/Ideal_Customer_Criteria__c.object
<CustomObject>
    <description>Blue Sheet SAM Integration</description>
    <fields>
        <fullName>Critieria_Match__c</fullName>
        <description>SAM ICC Integration</description>
        <label>Critieria Match</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>SAM ICC Reporting Information</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ideal Customer Criteria</relationshipLabel>
        <relationshipName>Ideal_Customer_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Ideal Customer Criteria</label>
    <nameField>
        <label>Ideal Customer Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideal Customer Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>